# python-challenge

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_p00.py  test_p000.py  test_p001.py  test_p002.py  test_p003.py
