[tool.poetry]
name = "python-challenge"
version = "0.1.0"
description = ""
authors = ["Pumidol Leelerdsakulvong <pumidol.l@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
